welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:34: error: not found: value faireMotif
faireMotif() 
^